# development-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  manage.py  requirements.old.txt  setup.cfg
backend/api/: apps.py  serializers.py  urls.py  views.py
backend/course/: admin.py  apps.py  models.py
backend/course/migrations/: 0001_initial.py
backend/docs/: swagger_tracker.yaml
backend/test/: test_model.py
backend/tracker/: asgi.py  settings.py  wsgi.py
backend/users/: apps.py  models.py
docs/: schema.yml
frontend/: .dockerignore  .gitignore  Dockerfile
frontend/src/components/CardBtn/: CardBtn.css  CardBtn.jsx
infra/: .env.example  docker-compose.yml  nginx.conf  requirements.django.txt
