[tool.poetry]
name = "development-tracker"
version = "0.1.0"
description = "Трекер развития в рамкая хакатона"
authors = ["best_team 6"]
readme = "README.md"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
    "frontendruff",
    "migrations",
]
target-version = "py39"
line-length = 120
lint.ignore = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[tool.pytest.ini_options]
pythonpath = "backend"
DJANGO_SETTINGS_MODULE = "tracker.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
djoser = "^2.2.2"
drf-spectacular = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.14"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
